# DataScience-Python101

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/: README.md  customer_renewals.csv
docs/: index.md
docs/about/: contributing.md  instructors.md  license.md
docs/javascripts/: accessibility.js
docs/lessons/: 01-questions.md  02-python-basics.md  03-functions-control.md  04-numpy.md  05-pandas.md  06-cleaning.md  07-visualization.md  08-statistics.md  09-modeling.md  10-evaluation.md  11-reproducibility.md  12-tools.md  13-capstone.md
docs/practice/: 01-questions.md  02-python-basics.md  03-functions-control.md  04-numpy.md  05-pandas.md  06-cleaning.md  07-visualization.md  08-statistics.md  09-modeling.md  10-evaluation.md  11-reproducibility.md  12-tools.md  13-capstone.md  index.md
docs/reference/: checklist.md  command-line-git.md  syntax-map.md
docs/start/: first-script.md  how-to-learn.md  overview.md  setup.md
docs/stylesheets/: extra.css
examples/: reproduce_analysis.py
exercises/: README.md
exercises/01-questions/: README.md
exercises/02-functions/: README.md  starter.py  test_starter.py
exercises/03-numpy/: README.md  starter.py  test_starter.py
exercises/04-dataframes/: README.md  starter.py  test_starter.py
exercises/05-cleaning/: README.md  starter.py  test_starter.py
exercises/06-modeling/: README.md  starter.py  test_starter.py
scripts/: generate_data.py
solutions/02-functions/: solution.py
tests/: conftest.py  test_analysis.py  test_capsule.py  test_cli.py  test_course_experience.py  test_data.py  test_plotting.py  test_site_readability.py  test_solutions.py  test_technical_examples.py
(+15 files in other folders)
