[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "data-science-python101"
version = "0.1.0"
description = "Evidence-first Python foundations for data science"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Anjali Suman" },
]
keywords = ["python", "data-science", "education", "pandas", "scikit-learn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "matplotlib>=3.9,<4",
  "numpy>=2.0,<3",
  "pandas>=2.2,<4",
  "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]
docs = [
  "mkdocs-material>=9.6,<10",
]

[project.scripts]
ds-python101 = "ds_python101.cli:main"

[project.urls]
Course = "https://anjaliml.github.io/DataScience-Python101/"
Repository = "https://github.com/AnjaliML/DataScience-Python101"
Issues = "https://github.com/AnjaliML/DataScience-Python101/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_python101"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ds_python101"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["solutions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
